sentiment analysis for 5 fields added

--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -7,6 +7,10 @@
     <title>Sentiment Analysis</title>
 </head>
 <body>
-    {{sentiment}}
+    {{sentiment1}}
+    {{sentiment2}}
+    {{sentiment3}}
+    {{sentiment4}}
+    {{sentiment5}}
 </body>
 </html>
