--- a/templates/home.html
+++ b/templates/home.html
@@ -1,20 +1,40 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <link rel="stylesheet" href="{% static 'css\styles.css' %}"> 
+    <title>Sentiment Analyzer</title>
 </head>
 <body>
-    <form method="POST" action="/feedback/">
-        {% csrf_token %}
-        <input type ="text" name ="field1"> <br> <br>
-        <input type ="text" name ="field2"> <br> <br>
-        <input type ="text" name ="field3"> <br> <br>
-        <input type ="text" name ="field4"> <br> <br>
-        <input type ="text" name ="field5"> <br> <br>
-        <input type = 'submit'>Analyse</input>
-      </form>
+    <div class="login-box">
+        <h2>Sentiment Analyzer</h2>
+        <form method="POST" action="/feedback/">
+            {% csrf_token %}
+            <div class="user-box">
+                <input type ="text" name ="field1">
+                <label>Education system</label>
+            </div>
+            <div class="user-box">
+                <input type ="text" name ="field2">
+                <label>Crime management</label>
+            </div>
+            <div class="user-box">
+                <input type ="text" name ="field3">
+                <label>Transport  system</label>
+            </div>
+            <div class="user-box">
+                <input type ="text" name ="field4">
+                <label>Hygiene</label>
+            </div>
+            <div class="user-box">
+                <input type ="text" name ="field5">
+                <label>Health</label>
+            </div>
+            <input type = 'submit' value ="Analyze"></input>
+        </form>
+    </div>
 </body>
 </html>
