--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="login-box">
-        <h2>Sentiment Analyzer</h2>
+        <h2>DataFeed Sentiment Analyzer</h2>
         <form method="POST" action="/feedback/">
             {% csrf_token %}
             <div class="user-box">
